--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ futures-timer = "3.0.2"
 glob = "0.3.1"
 lazy_static = "1.4.0"
 rusqlite = "0.29.0"
+ssh = "0.1.4"
 thiserror = "1.0.40"
 tui = "0.19.0"
