mess to clean up later

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ crossterm = { version = "0.26.1", features = ["event-stream", "futures-core"] }
 futures = "0.3.28"
 futures-timer = "3.0.2"
 glob = "0.3.1"
+ini = "1.3.0"
 lazy_static = "1.4.0"
 rusqlite = "0.29.0"
-ssh = "0.1.4"
+ssh2 = "0.9.4"
 thiserror = "1.0.40"
 tui = "0.19.0"
