--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ glob = "0.3.1"
 ini = "1.3.0"
 lazy_static = "1.4.0"
 rusqlite = "0.29.0"
+serde = { version = "1.0.175", features = ["derive"] }
+serde_json = "1.0.103"
 ssh2 = "0.9.4"
 thiserror = "1.0.40"
 tui = "0.19.0"
